--- a/Biblioteca Interactiva Municipal/web/index.html
+++ b/Biblioteca Interactiva Municipal/web/index.html
@@ -52,12 +52,18 @@ and open the template in the editor.
 					<nav class="navbar">
 						<ul class="navbar_menu">
 							<li><a href="#">Inicio</a></li>
-							<li><a href="#">Libros</a></li>
-							<li><a href="#">Prestamo</a></li>
-                            <li><a href="#">Actividades</a></li>
-                            <li class="my_account_item"><a href="#"><small class="glyphicon glyphicon-user"></small>&nbsp Registrarse</a></li>
-                            <li><a href="#"><small class="glyphicon glyphicon-log-in"></small>&nbsp Iniciar Sesión</a></li>
-                        </ul>
+                                                        <li class="currency"><a href="#">Libros<i class="fa fa-angle-down"></i>
+                                                        </a>
+                                                        <ul class="currency_selection">
+                                                            <li><a href="#">Agregar libro</a></li>
+                                                            <li><a href="#">Buscar libro</a></li>
+                                                        </ul>
+                                                        </li>
+                                                        <li><a href="#">Prestamo</a></li>
+                                                        <li><a href="#">Actividades</a></li>
+                                                        <li class="my_account_item"><a href="#"><small class="glyphicon glyphicon-user"></small>&nbsp Registrarse</a></li>
+                                                        <li><a href="#"><small class="glyphicon glyphicon-log-in"></small>&nbsp Iniciar Sesión</a></li>
+                                                        </ul>
                         <div class="hamburger_container">					
                             <i class="fa fa-bars" aria-hidden="true" style="color:white"></i>
 						</div>
